# libcamiface

./: .gitignore  99-pt-grey-firefly-mv-usb.newudev.rules  99-pt-grey-firefly-mv-usb.oldudev.rules  CMakeLists.txt  LICENSE.txt  README.rst  README.txt  SConstruct  TODO.rst  libcamiface-0.5.8.tar.gz.delta  libcamiface-0.5.8.tar.gz.id  libcamiface-0.5.9.tar.gz.delta  libcamiface-0.5.9.tar.gz.id  libcamiface-0.6.0.tar.gz.delta  libcamiface-0.6.0.tar.gz.id  libcamiface-0.6.1.tar.gz.delta  libcamiface-0.6.1.tar.gz.id  libcamiface-0.6.2.tar.gz.delta  libcamiface-0.6.2.tar.gz.id  libcamiface-0.6.3.tar.gz.delta  libcamiface-0.6.3.tar.gz.id  libcamiface-0.8.1.tar.gz.delta  libcamiface-0.8.1.tar.gz.id  libcamiface-0.8.2.tar.gz.delta  libcamiface-0.8.2.tar.gz.id  libcamiface-0.8.3.tar.gz.delta  libcamiface-0.8.3.tar.gz.id  libcamiface-0.8.4.tar.gz.delta  libcamiface-0.8.4.tar.gz.id  libcamiface-0.9.0.tar.gz.delta  libcamiface-0.9.0.tar.gz.id  libcamiface_0.10.0.orig.tar.gz.delta  libcamiface_0.10.0.orig.tar.gz.id  libcamiface_0.10.1.orig.tar.gz.delta  libcamiface_0.10.1.orig.tar.gz.id  make_release_tarball.sh  prosilica_help.py  pynet_notes.txt  setup.py  setup_autogen.py  (+3 more)
CMakeModules/: FindBaslerPylon.cmake  FindDC1394.cmake  FindFlyCapture.cmake  FindGenICam.cmake  FindProsilicaGigE.cmake
cam_iface/: cam_iface_ctypes.py  cam_iface_dummy.py  cam_iface_sharedmem.py  tests.py
cam_iface_choose/: test.py
camiface_xcode/camiface_xcode.xcodeproj/: project.pbxproj
camwire/: CHANGELOG  INSTALL  Makefile  Makefile.common  README_camwire  README_conf  SConscript
camwire/etc/camwire/: A301fc.conf  A602f.conf  A602fc.conf  API-200.conf  Makefile  README_cameraIds  README_pixcodings
camwire/examples/: Makefile
camwire/examples/camlatency/: Makefile  camlatency.c
camwire/examples/cammonitor/: Makefile  cammonitor.1  cammonitor.c  display-codes.h  display-sdl.c  display-sdl.h  display-xv.c  display-xv.h  display.c  display.h
camwire/src/: Makefile  camwire_1394.c  camwirebus-test.c  camwirebus_1394.c  camwirebus_internal_1394.h  camwiremacros_1394.h
camwire/src/camwire/: camwire.h  camwirebus.h
camwire/tools/: Makefile  resetbus_1394.c  unlisten_1394.c
cmu1394/: 1394Camera.dsw  cmu1394simple.cpp
cmu1394/1394CameraDemo/: 1394CameraDemo.cpp  1394CameraDemo.dsp  1394CameraDemo.dsw  1394CameraDemo.exe.manifest  1394CameraDemo.rc  1394CameraDlg.cpp  1394CameraDlg.h  1394PartialScanDlg.cpp  1394PartialScanDlg.h  1394camerademo.h  MainFrm.cpp  MainFrm.h  resource.h
cmu1394/1394CameraDemo/res/: 1394CameraDemo.rc2
cmu1394/1394camera/: 1394CamAcq.cpp  1394CamCap.cpp  1394CamFMR.cpp  1394CamMem.cpp  1394CamRGB.cpp  1394CamReg.cpp  1394Camera.cpp  1394Camera.h  1394CameraControl.cpp  1394CameraControl.h  1394CameraControlSize.cpp  1394CameraControlTrigger.cpp  1394CameraControlTrigger.h  1394camera.dsp  1394camera.dsw  1394camera.rc  1394main.c  ControlDialog.cpp  ControlDialog.h  ControlPane.cpp  ControlSizeDialog.cpp  ControlWrappers.cpp  debug.c  debug.h  isochapi.c  pch.h  resource.h
cmu1394/1394cmdr/: 1394api.c  1394cmdr.c  1394cmdr.dsp  1394cmdr.dsw  1394cmdr.h  1394cmdr.rc  1394common.h  asyncapi.c  debug.h  ioctl.c  isochapi.c  makefile  pch.h  pnp.c  power.c  sources  util.c
cmu1394/include/: 1394CameraControlSize.h  1394camapi.h  1394common.h
cmu1394/lib/: 1394camera.lib
cmu1394/windows_oddities/: lib.c
debian/: camiface-prosilica.install  camiface.install  changelog  control  copyright  libcamiface-avt.install  libcamiface-avt.udev  libcamiface-basler-dev.install  libcamiface-basler.install  libcamiface-dev.install  libcamiface-prosilica.install  libcamiface.install  libcamiface.udev  rules
demo/: CMakeLists.txt  SConscript  cam2theora.c  liveview-glut.c  multi-cam-autoset.c  multi-cam.c  opencv.c  png2theora.c  save_fmf.c  simple.c  simple.py  simple_fast.c
imperx_gige/: IPX-2M30-L.xml  imperx_gige_simple.c++
inc/: cam_iface.h
include/: cam_iface.h
shmwrap/: SConscript  _shmwrap_state.c  _shmwrap_state.h  cam_iface_shmwrap.h  shmwrap.c  shmwrap.h  shmwrap_recv.c
src/: CMakeLists.txt  _cam_iface_camwire.c  _cam_iface_shm.c  _cam_iface_shm.pyx  _pynetmodule.c  c_cam_iface.pxd  c_lib.pxd  c_lib_shm.pxd  c_numeric.pxd  c_python.pxd  cam_iface.c  cam_iface.pyx  cam_iface_aravis.c  cam_iface_aravis.h  cam_iface_basler_pylon.cpp  cam_iface_basler_pylon.h  cam_iface_bcam.cpp  cam_iface_blank.c  cam_iface_camwire.c  cam_iface_cmu1394.cpp  cam_iface_common.c  cam_iface_dc1394.c  cam_iface_dummy.py  cam_iface_flycapture.c  cam_iface_imperx.cpp  cam_iface_internal.h  cam_iface_mega.c  cam_iface_pgr_flycap.cpp  cam_iface_pgr_flycap.h  cam_iface_prosilica_gige.cpp  cam_iface_prosilica_gige.h  cam_iface_prosilica_gige.nothreads_broken.cpp  cam_iface_prosilica_gige.openthreads.cpp  cam_iface_prosilica_gige.will_work_when_driver_bugs_fixed.cpp  cam_iface_pynet.c  cam_iface_quicktime.c  cam_iface_static_functions.h  cam_iface_unity.c  cam_iface_v4l2.c  pynetx.py  (+1 more)
test/: test-dc1394-select.c  units.py
